--- a/form.html
+++ b/form.html
@@ -11,37 +11,85 @@
 		}
 		table
 		{
-			border: 3px solid black;
-			padding: 10px;
+			border: 3px solid black; 
+			padding: 0px;
 			border-collapse: collapse;
+
 		} 
 		td
 		{
 			padding: 10px;
 			font-size: 25px;
-			border: 3px solid black;
+			border-spacing: 30px;
+
+			
 		}
+		input[type="text"]
+		{
+			width: 250px;
+			height: 20px;
+			font-size: 20px;
+		}
+		input[type="number"]
+		{
+			width: 250px;
+			height: 20px;
+			font-size: 20px;
+		}
+		input[type="Email"]
+		{
+			width: 250px;
+			height: 20px;
+			font-size: 20px;
+		}
+		input[type="contact"]
+		{
+			width: 250px;
+			height: 20px;
+			font-size: 20px;
+		}
+		input[type="password"]
+		{	
+			width: 250px;
+			height: 20px;
+			font-size: 20px;
+		}
+	
 		</style>
+			<script type="text/javascript">
+		function validation() {
+			if (document.myform["Age"].value>27) {
+				alert("Age must be below 27");
+			}
+			if (!(document.myform["Username"].value=([a-z]||[A-Z])) {
+alert("Please Enter a valid Username");
+			}
+
+		}
+	</script>
 	</head>
+
 	<body>
-		<h1>
 		
-						Please fill the form for creating account
-				
-		</h1>
-		<form>
+		<form name="myform">
+
 			<table align="center">
 				<tr>
-					<td>
-						fullname:
-						<input type="text" name="">
+				
+		<td  style="font-size: 40px;">
+						Please fill the form for creating account
+			</td>	
+		
+	</tr>
+				<tr>
+					<td>Username
+						<input type="text" name="Username" placeholder="Enter your Username">
 					</td>
 
 				</tr>
 				<tr>
-					<td>
-						Age
-						<input type="number" name="">
+					<td>Age
+						<input type="number" name="Age" placeholder="Must be under 27">
 					</td>
 
 				</tr>
@@ -56,7 +104,7 @@
 				<tr>
 					<td>
 						Email
-						<input type="Email" name="">
+						<input type="Email" name="Email" placeholder=".......@gmail.com">
 					</td>
 
 				</tr>
@@ -95,8 +143,8 @@
 				</tr>
 				<tr>
 					<td>
-						password:
-						<input type="password" name="">
+						password
+						<input type="password" name="" minlength="8">
 					</td>
 
 				</tr>
@@ -109,7 +157,18 @@
 				</tr>
 				<tr>
 					<td>
-						<button style="height: 30px;width: 100px;color: green;">submit</button> <button style="height: 30px;width: 100px;text-align: center;size: 45px;">cancel</button> 
+						Nationality
+						<select>
+						<option>Indian</option>
+						<option>Australian</option>
+						<option>canadian</option>
+						<option>russian</option>
+						</select>
+					</td>
+				</tr>
+				<tr	>				<td>
+						<input type="button" value="Submit" style="height: 30px;width: 80px;color: green " onclick="validation()">
+						<button style="height: 30px;width: 80px;color: green ">cancel</button>
 					</td>
 				</tr>
 			</table>
